[gd_scene load_steps=2 format=3 uid="uid://cqs0oq6687w77"]

[ext_resource type="Script" uid="uid://bv88n25k623ia" path="res://views/credentials_view.gd" id="1_tlje0"]

[node name="CredentialsView" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlje0")
metadata/_tab_index = 5

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="Bank" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="BankCredentialTree" type="Tree" parent="TabContainer/Bank"]
unique_name_in_owner = true
layout_mode = 2

[node name="Mail" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MailCredentialTree" type="Tree" parent="TabContainer/Mail"]
unique_name_in_owner = true
layout_mode = 2
